[package]
name = "kefctl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.21", features=["derive"]}
simple-error = { version = "0.2.3" }
libkef = { path = "../libkef" }
ssdp = { version = "0.7.0" }
url = { version = "1.7.2" }
xmltree = { version = "0.10.3" }
reqwest = { version = "0.11.12", features = ["blocking", "json"]}
bytes = {version = "1.2.1"}