[package]
name = "kefctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kefctl"
path = "src/kefctl.rs"

[[bin]]
name = "kefdisc"
path = "src/kefdisc.rs"

[dependencies]
clap = { version = "3.2.21", features=["derive"]}
simple-error = { version = "0.2.3" }
tokio = { version = "1.21.1", features=["full"] }
libkef = { path = "../libkef" }
log = {version = "0.4.17"}
env_logger = {version = "0.9.1"}